@@ -1,11 +1,10 @@
 import(stats,Matrix)
-#,memisc)
 export(
       mclogit,
+      mclogit.fit,
+      mclogit.fit.rePQL,
       mclogit.control,
-      getSummary.mclogit#,
-      #mclogit.fit,
-      #mclogit.fit.rePQL
+      getSummary.mclogit
 )
 S3method(print,mclogit)
 S3method(vcov,mclogit)
@@ -16,7 +15,6 @@ S3method(print,summary.mclogit)
 S3method(fitted,mclogit)
 S3method(predict,mclogit)
 S3method(residuals,mclogit)
-#S3method(getSummary,mclogit)
 S3method(AIC,mclogit)
 S3method(BIC,mclogit)
 S3method(anova,mclogit)
